--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>快乐星球的网站</title>
     <style>  
+    .flex{
+      display:flex;
+      justify-content:flex-end;
+      }
+    .klr{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      flex-direction:column;
+      }
       body {
         margin: 0;
       }
@@ -14,24 +24,32 @@
     <div style="
     background-color:#C0C0C0;
     padding:30px;
-    text-align:center;"><img src="https://s21.ax1x.com/2025/02/20/pEQ6Ez6.png" width="50px" style="border-radius: 100%;"></div>
+    text-align:center;">
+    <img src="https://s21.ax1x.com/2025/02/20/pEQ6Ez6.png"
+    alt="头像"
+    width="50px" 
+    style="border-radius: 100%;"/>
+    </div>
     <div style="max-width:700px;
-    margin:30px auto;
+    margin:0px;
     padding:15px;
     line-height:1.7;
     ">
-    <p>哈哈哈哈哈</p>
-    <p>哈哈哈哈哈哈哈哈</p>
     <p>哈哈哈哈哈哈哈</p>
-    <p>哈哈哈哈哈哈哈哈</p>
+    <p>哈哈哈哈哈哈哈</p>
+    <p>哈哈哈哈哈</p>
     <p>哈哈哈哈哈哈</p>
     </div>
-    <div style="
+    <div 
+    class="klr"
+    style="
     background-color:#C0C0C0;
-    padding:30px;
-    text-align:center;">
-    <p>快乐星球</p>
-    <p><a href="https://m.bilibili.com/">bilibili链接</a></p>
+    padding:px;
+    max-width:700px;
+    min-height:125px;
+    ">
+    <p style="display:block;margin:0px;">快乐星球</p>
+    <p style="margin:0px;"><a href="https://m.bilibili.com/">bilibili</a>链接</p>
     </div>
   </body>
 </html>
