--- a/index.html
+++ b/index.html
@@ -1,55 +1,76 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>快乐星球的网站</title>
-    <style>  
-    .flex{
-      display:flex;
-      justify-content:flex-end;
-      }
-    .klr{
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      flex-direction:column;
-      }
-      body {
-        margin: 0;
-      }
-    </style>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>WebCat</title>
+ <style>
+ body{
+   height:100vh;
+   background-color:#eee;
+   margin:0px;
+   }
+ *{
+   border:0px solid #00CCCC
+   }
+ .flex{
+   display:flex;
+   }
+ .bjb{
+   background-color:#ffffff
+   }
+ .column{
+   flex-direction:column;
+   }
+ .jz{
+   justify-content:center;
+   align-items:center;
+   }
+ </style>
   </head>
-  <body>
-    <div style="
-    background-color:#C0C0C0;
-    padding:30px;
-    text-align:center;">
-    <img src="https://s21.ax1x.com/2025/02/20/pEQ6Ez6.png"
-    alt="头像"
-    width="50px" 
-    style="border-radius: 100%;"/>
-    </div>
-    <div style="max-width:700px;
-    margin:0px;
-    padding:15px;
-    line-height:1.7;
-    ">
-    <p>哈哈哈哈哈哈哈</p>
-    <p>哈哈哈哈哈哈哈</p>
-    <p>哈哈哈哈哈</p>
-    <p>哈哈哈哈哈哈</p>
-    </div>
-    <div 
-    class="klr"
-    style="
-    background-color:#C0C0C0;
-    padding:px;
-    max-width:700px;
-    min-height:125px;
-    ">
-    <p style="display:block;margin:0px;">快乐星球</p>
-    <p style="margin:0px;"><a href="https://m.bilibili.com/">bilibili</a>链接</p>
-    </div>
+  <body class="flex">
+  <!--全部-->
+  <div class="flex column">
+  <!--头部-->
+  <div class="flex column jz bjb" 
+  style="
+  z-index:1;
+  width:350px;
+  height:125px;">
+  <img src="https://s21.ax1x.com/2025/02/20/pEQ6Ez6.png" 
+  style="
+  width:50px;
+  height:50px;
+  border-radius:100%;
+  "/>
+  <div>快乐星球</div>
+  </div>
+  <!--内容-->
+  <div class="flex column "
+  style="
+  padding:15px;
+  overflow:auto;">
+  <div>我是klxq(快乐星球)</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  </div>
+  <!--尾部-->
+  <div class="flex column jz bjb" 
+  style="
+  z-index:1;
+  width:350px;
+  height:125px;">
+  <div>快乐星球的网站</div>
+  <div style="margin-top:8px;"><a href="https://m.bilibili.com/">blibli</a>友情链接</div>
+  </div>
   </body>
 </html>
