--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   z-index:1;
   width:350px;
   height:125px;">
-  <img src="https://s21.ax1x.com/2025/02/20/pEQ6Ez6.png" 
+  <img src="https://s21.ax1x.com/2025/02/28/pE8GedP.jpg" 
   style="
   width:50px;
   height:50px;
@@ -69,7 +69,6 @@
   height:125px;">
   <div>快乐星球的网站</div>
   <div style="margin-top:8px;"><a href="https://m.bilibili.com/">blibli</a>友情链接</div>
-  </div>
   </div>
   </body>
 </html>
