--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <div style="margin-top:30px;">哈哈哈哈哈哈</div>
   <div style="margin-top:30px;">哈哈哈哈哈哈</div>
   <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  </div>
   <!--尾部-->
   <div class="flex column jz bjb" 
   style="
