now2 index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="flex column jz bjb" 
   style="
   width:350px;
-  height:125px;">
+  height:auto;">
   <div>快乐星球的网站</div>
   <div style="margin-top:8px;"><a href="https://m.bilibili.com/">blibli</a>友情链接</div>
   </div>
