--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
   padding:15px;
   overflow:auto;">
   <div>我是klxq(快乐星球)</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
-  <div style="margin-top:30px;">哈哈哈哈哈哈</div>
+  <div style="margin-top:30px;">我的魔方记录为16.38s</div>
+  <div style="margin-top:30px;">(我终于弄出来这个网站了，乾杯 - ( ゜- ゜)つロ)</div>
+  <div style="margin-top:30px;">(温馨提醒本网站适合手机仿问)</div>
+  <div style="margin-top:30px;"></div>
+  <div style="margin-top:30px;"></div>
+  <div style="margin-top:30px;"></div>
+  <div style="margin-top:30px;"></div>
+  <div style="margin-top:30px;"></div>
+  <div style="margin-top:30px;"></div>
+  <div style="margin-top:30px;"></div>
+  <div style="margin-top:30px;"></div>
+  <div style="margin-top:30px;"></div>
   </div>
   <!--尾部-->
   <div class="flex column jz bjb" 
