--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="flex column jz bjb" 
   style="
   z-index:1;
-  width:350px;
+  width:auto;
   height:125px;">
   <img src="https://s21.ax1x.com/2025/02/28/pE8GedP.jpg" 
   style="
@@ -66,8 +66,9 @@
   <!--尾部-->
   <div class="flex column jz bjb" 
   style="
-  width:350px;
-  height:auto;">
+  z-index:1;
+  width:auto;
+  height:125px;">
   <div>快乐星球的网站</div>
   <div style="margin-top:8px;"><a href="https://m.bilibili.com/">blibli</a>友情链接</div>
   </div>
