--- a/index.html
+++ b/index.html
@@ -1,76 +1,76 @@
-<!DOCTYPE html>
-<html>
-  <head>
-	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>快乐星球的网页</title>
- <style>
- body{
-   height:100vh;
-   background-color:#eee;
-   margin:0px;
+<！doctype 超文本标记语言>
+<超文本标记语言>
+  <头>
+	<元 字符集="utf-8" 姓名="视口" 内容="width=设备宽度，初始比例=1，最大比例=1，用户可缩放=否">
+	<标题>快乐星球的网页</标题>
+ <风格>
+身体{
+高度：100VH；
+背景色：#Eee；
+边缘：0px；
    }
  *{
-   border:0px solid #00CCCC
+边境：0px固体#00CCCC
    }
- .flex{
-   display:flex;
+.弯曲{
+显示:弯曲;
    }
- .bjb{
-   background-color:#ffffff
+.BJB{
+背景色：#FFFFFF
    }
- .column{
-   flex-direction:column;
+.柱{
+挠曲方向:柱;
    }
- .jz{
-   justify-content:center;
-   align-items:center;
+.JZ{
+justify-content：中心；
+对齐项目:中心;
    }
- </style>
-  </head>
-  <body class="flex">
+ </风格>
+  </头>
+  <身体 班级="弹性">
   <!--全部-->
-  <div class="flex column">
+  <div 班级="弹性列">
   <!--头部-->
-  <div class="flex column jz bjb" 
-  style="
-  z-index:1;
-  width:auto;
-  height:125px;">
-  <img src="https://s21.ax1x.com/2025/02/28/pE8GedP.jpg" 
-  style="
-  width:50px;
-  height:50px;
-  border-radius:100%;
+  <div 班级="弹性列jz BJB；对齐项：弹性启动；" 
+  风格="
+Z指数：1；
+宽度:自动;
+高度：125px；">
+  <IMG src="https://s21.ax1x.com/2025/02/28/pE8GedP.jpg" 
+  风格="
+宽度：50px；
+高度：50px；
+边界半径:100%;
   "/>
   <div>快乐星球</div>
   </div>
   <!--内容-->
-  <div class="flex column "
-  style="
-  padding:15px;
-  overflow:auto;">
+  <div 班级="弹性列"
+  风格="
+填充：15px；
+溢出:自动;">
   <div>我是klxq(快乐星球)</div>
-  <div style="margin-top:30px;">我的魔方记录为16.38s</div>
-  <div style="margin-top:30px;">(我终于弄出来这个网站了，乾杯 - ( ゜- ゜)つロ)</div>
-  <div style="margin-top:30px;">(温馨提醒本网站适合手机仿问)</div>
-  <div style="margin-top:30px;"></div>
-  <div style="margin-top:30px;"></div>
-  <div style="margin-top:30px;"></div>
-  <div style="margin-top:30px;"></div>
-  <div style="margin-top:30px;"></div>
-  <div style="margin-top:30px;"></div>
-  <div style="margin-top:30px;"></div>
-  <div style="margin-top:30px;"></div>
-  <div style="margin-top:30px;"></div>
+  <div 风格="上边距：30px；">我的魔方记录为16.38s</div>
+  <div 风格="上边距：30px；">(我终于弄出来这个网站了，干杯 - ( ゜- ゜)つロ)</div>
+  <div 风格="上边距：30px；">(温馨提醒本网站适合手机仿问)</div>
+  <div 风格="上边距：30px；"></div>
+  <div 风格="上边距：30px；"></div>
+  <div 风格="上边距：30px；"></div>
+  <div 风格="上边距：30px；"></div>
+  <div 风格="上边距：30px；"></div>
+  <div 风格="上边距：30px；"></div>
+  <div 风格="上边距：30px；"></div>
+  <div 风格="上边距：30px；"></div>
+  <div 风格="上边距：30px；"></div>
   </div>
   <!--尾部-->
-  <div class="flex column jz bjb" 
-  style="
-  z-index:1;
-  width:auto;
-  height:125px;">
+  <div 班级="弹性列jz BJB；对齐项：弹性端；" 
+  风格="
+Z指数：1；
+宽度:自动;
+高度：125px；">
   <div>快乐星球的网站</div>
-  <div style="margin-top:8px;"><a href="https://m.bilibili.com/">blibli</a>友情链接</div>
+  <div 风格="上边距:8PX;"><一个 href="https://m.bilibili.com/">blibli</一个>友情链接</div>
   </div>
-  </body>
-</html>
+  </身体>
+</超文本标记语言>
