--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div>我是klxq(快乐星球)</div>
   <div style="margin-top:30px;">我的魔方记录为16.38s</div>
   <div style="margin-top:30px;">(我终于弄出来这个网站了，乾杯 - ( ゜- ゜)つロ)</div>
-  <div style="margin-top:30px;"></div>
+  <div style="margin-top:30px;">(温馨提示本网站只适合手机打开)</div>
   <div style="margin-top:30px;"></div>
   <div style="margin-top:30px;"></div>
   <div style="margin-top:30px;"></div>
